--- a/Features.org
+++ b/Features.org
@@ -174,6 +174,8 @@
                    damage, at the cost of shield durability instead
    + bamboo :: When bamboo grows, it has a chance to spread in a
                random place in a 32x32x32 box of the original bamboo
+   + escalation :: If a player has four distinct potion effects, they
+                   begin to levitate in the air
 * IDEAS (UNIMPLEMENTED)
   + Wolves?
   + Fishing?
@@ -270,8 +272,6 @@
      Players who answer wrongly are not rewarded or punished.
    + Moss Revenge: When a moss block is broken, small chance of small
      slime to spawn
-   + When a player has 4 status effects, they gain levitation for 3
-     secs
    + Mundane potions can be crafted into gold nuggets
    + Gold nuggets can be eaten for nutrition. They act like sweet
      berries
