--- a/Features.org
+++ b/Features.org
@@ -36,6 +36,8 @@
                     in hot biomes
    + spillage :: When a bucket item is dropped for any reason, its
                  contents will spill on the ground
+   + eggshells :: The block two cubes below the player is constantly
+                  being turned to lava
 ** CUSTOM SPAWNING FEATURES
    + weepingangel :: Armor stands will chase you when you're not
                      looking at them, and armor stands will rarely
@@ -195,8 +197,8 @@
   + Bone blocks?
   + Nether blocks turn to lava sometimes at random if covered?
   + Two blocks below you turns to lava if concealed
-  + If you drop a bucket, it spills
-  + Opening a menu causes your main hand to drop whatever's in it
+  + Nearby chests might get opened instead of the one you intended
+    (excludes mimics)
 ** HATCRAFTER'S IDEAS
    + Cookies, when eaten, have a random effect (lower numbered effects
      are more likely)
