--- a/Features.org
+++ b/Features.org
@@ -97,6 +97,8 @@
    + parrots :: Parrots automatically tame themselves to belong to the
                 nearest player, a parrot on a player's shoulder
                 launches that player into the air
+   + funhat :: Zombies and skeletons sometimes spawn with custom hats,
+               which drop when they're killed
 ** EGG FEATURES
    + eggs :: Almost any mob (or diamonds) can spawn from an egg
    + eggarrow :: Skeletons will fire eggs in addition to arrows
