--- a/Features.org
+++ b/Features.org
@@ -105,6 +105,8 @@
      to player-crafted golems)
    + slimesplit :: When slimes die, they split into larger slimes; if
      a sufficiently large slime dies, it does not split into anything
+   + expirationdate :: When a player eats bread, there's a 10% chance
+     that a small slime spawns near them
 ** EGG FEATURES
    + eggs :: Almost any mob (or diamonds) can spawn from an egg
    + eggarrow :: Skeletons will fire eggs in addition to arrows
@@ -273,7 +275,6 @@
      - Wand of Force: Knockback II
      - Wand of Slicing: Sharpness III
    + Items destroyed by Curse of Vanishing instead become a random item
-   + When consumed, bread may spawn a small slime near the player
    + Dimension Chain - Whenever a player dies, a random player in a
      different dimension has a 35% chance to die as well
    + The Doctor Dances
