--- a/Features.org
+++ b/Features.org
@@ -113,6 +113,10 @@
      that a small slime spawns near them
    + wardensummon :: If you spend more than five seconds in total
                      darkness, a Warden will appear near you
+   + creeperdeath :: Killing a non-charged creeper summons allays;
+                     exploding creepers also summon allays
+   + allays :: Allays automatically bond to the nearest player and
+               have an infinite supply of flowers
 ** EGG FEATURES
    + eggs :: Almost any mob (or diamonds) can spawn from an egg
    + eggarrow :: Skeletons will fire eggs in addition to arrows
