--- a/Features.org
+++ b/Features.org
@@ -122,6 +122,8 @@
                have an infinite supply of flowers
    + johnny :: Breeding animals sometimes spawns a Vindicator named
      "Johnny"
+   + solidswap :: Lava running on water creates obsidian, while water
+     running on lava created cobblestone
 ** EGG FEATURES
    + eggs :: Almost any mob (or diamonds) can spawn from an egg
    + eggarrow :: Skeletons will fire eggs in addition to arrows
